# OpenGL-Study

./: .gitignore  CMakeLists.txt  README.md
common/: controls.cpp  controls.hpp  shader.cpp  texture.cpp  texture.hpp
src/: ColorFragmentShader.frag  main.cpp
src/Tutorial1_make_window/: tutorial1.cpp
src/Tutorial2/: tutorial2.cpp
src/Tutorial3_matrics/: TriangleFragment.frag  TriangleVertex.vert  tutorial3.cpp
src/Tutorial4_colored cube/: tutorial4.cpp
src/Tutorial4_colored_cube/: CubeVertexShader.vert  tutorial4.cpp
src/Tutorial5_textured_cube/: TextureFragmentShader.frag  TransformVertexShader.vert  tutorial5.cpp
src/Tutorial6_keyboard_and_mouse/: tutorial6.cpp
학습기록/: 0. 초기 설정.md  1. 화면 생성.md  2. 삼각형 그리기.md  3. 매트릭스(행렬).md  4. 색깔이 입혀진 육면체.md  5. 텍스쳐가 입혀진 큐브.md  6. 키보드와 마우스.md
